--- a/main.tex
+++ b/main.tex
@@ -1,23 +1,29 @@
 %! TEX program = xelatex
-\documentclass[font=Times]{gw-dissertation}[2021/11/19]
-\usepackage[style=numeric-comp]{biblatex}  % a modern alternative to bibtex
+\documentclass[font=STIX2]{gw-dissertation}[2021/11/19]
+\usepackage[style=numeric-comp, url=false, sorting=none]{biblatex}  % a modern alternative to bibtex
 \usepackage{floatrow}
 \usepackage{booktabs} % table separation lines
+\usepackage{threeparttable}
 \usepackage[section]{placeins} % limit floats (figs, tables, etc.) to the same sections
 \usepackage[font={singlespacing, footnotesize}, labelfont=bf]{subcaption} % subfigures' captions
 \usepackage{listings}
 \usepackage{graphicx}
-\usepackage[none]{hyphenat}  % disable hyphenation; not required by GW guideline
+\usepackage{hyphenat}  % disable hyphenation; not required by GW guideline
 \usepackage{longtable}
 \usepackage{lscape}
 \usepackage{tikz} % visual computational graphs
 \usepackage{tikzscale}
-\usepackage{tikzit}
+\usepackage{tikzit}  % local custom package `tikzit.sty' in the same folder of main.tex
 \usepackage{relsize}
+\usepackage[overload]{empheq}
+\usepackage[protrusion=true, final]{microtype}
+\usepackage{xurl}  % break long URLs in References
+\usepackage{algpseudocode}  % algorithm block
 \input{tikzit.tikzstyles}
 
 % bib file location; use only one single bib file
-\addbibresource{reference.bib} 
+\addbibresource{references.bib} 
+\urlstyle{same}  % use the same font for URLs in References
 
 % default figure search path
 \graphicspath{{figs}}
@@ -40,72 +46,115 @@
 
 \input{notion.tex}
 
+% for fast compilation; should be removed once the draft is done
+% \renewcommand{\cite}[1]{[TBD]}
+
 \chapter{Introduction}
 
-    \section{Background and Motivation}
+    \section{Overview}\label{sec:overview}
     \input{chapter.1/section.1.1.tex}
 
-    \section{Literature Review on Physics-Informed Neural Networks}
+    \section{Physics-informed neural networks (PINNs)}\label{sec:pinn-review}
     \input{chapter.1/section.1.2.tex}
 
-    \section{Research Aims}
+    \section{Issues and Open-questions in PINNs}\label{sec:pinn-issues}
     \input{chapter.1/section.1.3.tex}
 
-\chapter{PetIBM: a distributed-GPU incompressible Navier-Stokes solver}
-\input{chapter.2/section.2.1.tex}
+    \section{Motivation and Research Aims}\label{sec:aims}
+    \input{chapter.1/section.1.4.tex}
 
-    \section{Mathematical Formulation}
-    \input{chapter.2/section.2.1.1.tex}
+\chapter{PetIBM: a distributed-GPU incompressible Navier-Stokes solver}\label{chap:petibm}
+\input{chapter.2/summary.tex}
 
-    \section{Implementation Details}
-    \input{chapter.2/section.2.1.2.tex}
+    \section{Decoupled Immersed-Boundary Projection Method}\label{sec:petibm-math}
+    \input{chapter.2/section.2.1.tex}
 
-    \section{Verification and Validation}
+    \section{Implementation Details}\label{sec:petibm-impl}
+    \input{chapter.2/section.2.2.tex}
 
-    \section{Performance Benchmarks}
-    \input{chapter.2/section.2.1.4.tex}
+    \section{Verification and Validation}\label{sec:petibm-vv}
+    \input{chapter.2/section.2.3.tex}
 
-\chapter{Physics-Informed Neural Networks}
+    \section{Performance Benchmarks}\label{sec:petibm-perf}
+    \input{chapter.2/section.2.4.tex}
 
-    \section{Fundamental of Physics-Informed Neural Networks}
+\chapter{Physics-Informed Neural Networks}\label{chap:pinn}
 
-        \subsection{Deep Neural Networks Modeling}
+    \section{Solving Workflow Overview}\label{sec:pinn-workflow-overview}
+
+        \subsection{Overview}\label{sec:pinn-overview}
         \input{chapter.3/section.3.1.1.tex}
 
-        \subsection{Periodic Boundaries}\label{section:periodic-boundary}
-
-        \subsection{Remark on difference and similarities with conventional numerical methods}
+        \subsection{Batched Training}\label{sec:batched-training}
         \input{chapter.3/section.3.1.2.tex}
 
-        \subsection{Automatic Differentiation}
+        \subsection{Adaptive Loss Aggregation}\label{sec:loss-annealing}
         \input{chapter.3/section.3.1.3.tex}
 
-        \subsection{Adaptive Loss Reduction}\label{section:loss-annealing}
-        \input{chapter.3/section.3.1.4.tex}
+    \section{Deep Neural Network Modeling}\label{sec:pinn-dnnm}
 
-    \section{Adam Optimizer, Batched Training, and Cyclical Learning Rates}\label{section:adam}
+        \subsection{Multilayer Perceptron Networks}\label{sec:mlp}
+        \input{chapter.3/section.3.2.1.tex}
 
-    \section{Nonlinear Conjugate-Gradient Optimizer and Line Search}
+        \subsection{Periodic Boundaries Handling}\label{sec:periodic-boundary}
+        \input{chapter.3/section.3.2.2.tex}
 
-    \section{Stochastic Weight Averaging and Training Strategy}
+        \subsection{Automatic Differentiation}\label{sec:ad}
+        \input{chapter.3/section.3.2.3.tex}
 
-\chapter{Computational Experiments Configurations and Results}
+    \section{Other Training Strategies}
+    \input{chapter.3/section.3.3.tex}
+
+        \subsection{Cyclical Learning Rates and Stochastic Weight Averaging}\label{sec:cyclic-swa}
+        \input{chapter.3/section.3.3.1.tex}
+
+        \subsection{Nonlinear Conjugate-Gradient Optimizer and Line Search}\label{sec:ncg}
+        \input{chapter.3/section.3.3.2.tex}
+
+    \section{Remark on difference and similarities with conventional numerical methods}\label{sec:pinn-diff}
+    \input{chapter.3/section.3.4.tex}
+
+\chapter{Computational Experiments and Benchmarks}\label{chap:pinn-cases}
 
     \section{2D Taylor-Green Vortex and Configurations}
     \input{chapter.4/section.4.1.tex}
 
-    \section{Vanilla Summation versus Annealing Loss Aggregation}
+        \subsection{Problem description}
+        \input{chapter.4/section.4.1.1.tex}
 
-    \section{Exponentially Decayed versus Cyclical Learning Rates}
-    The upper and lower bounds for cycling learning rates are $10^{-3}$ and $10^{-6}$, while one cycle takes 4000 iterations.
+        \subsection{Network and solver configurations}
+        \input{chapter.4/section.4.1.2.tex}
 
-    \section{Unsteady Flow Problems}
+        \subsection{Result Visualizations}
+        \input{chapter.4/section.4.1.3.tex}
 
-\chapter{Discussion and Future Works}
+        \subsection{Scalability}
+        \input{chapter.4/section.4.1.4.tex}
+
+        \subsection{Training Strategy Investigation}
+        \input{chapter.4/section.4.1.5.tex}
+
+        \subsection{Model Complexity and time cost}
+        \input{chapter.4/section.4.1.6.tex}
+
+    \section{Steady 2D Cylinder Flow: $Re=40$}
+        \subsection{Problem description and case configurations}
+        \subsection{Results}
+        \input{chapter.4/section.4.2.2.tex}
+    \section{Unsteady 2D Cylinder Flow: Vortex Shedding at $Re=200$}
+        \subsection{Problem description and case configurations}
+        \subsection{Results}
+
+\chapter{Discussion and Future Works}\label{chap:discussion}
+\input{chapter.5.tex}
+
+\sloppy
+\printbibliography[heading=bibintoc, title=References]
+\fussy
 
 \appendix
-\chapter{Extra Data and Visualizations for 2D Taylor-Green Vortex Benchmarks}\label{section:extra-data}
-\input{appendices/appendix_a.tex}
+\chapter{Extra Data and Visualizations for 2D Taylor-Green Vortex Benchmarks}\label{sec:extra-data}
+% \input{appendices/appendix_a.tex}
 
 \end{document}
 % vim:ft=tex
