--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,6 @@
 \usepackage[overload]{empheq}
 \usepackage[protrusion=true, final]{microtype}
 \usepackage{xurl}  % break long URLs in References
-\usepackage{algpseudocode}  % algorithm block
 \input{tikzit.tikzstyles}
 
 % bib file location; use only one single bib file
@@ -30,6 +29,9 @@
 
 % priority of the formats of figures
 \DeclareGraphicsExtensions{.pdf,.png}
+
+% disable notion table
+\showlosfalse
 
 % load my own macros
 \input{macros.tex}
@@ -43,11 +45,6 @@
 
 % document body
 \begin{document}
-
-\input{notion.tex}
-
-% for fast compilation; should be removed once the draft is done
-% \renewcommand{\cite}[1]{[TBD]}
 
 \chapter{Introduction}
 
@@ -116,45 +113,60 @@
 
 \chapter{Computational Experiments and Benchmarks}\label{chap:pinn-cases}
 
-    \section{2D Taylor-Green Vortex and Configurations}
-    \input{chapter.4/section.4.1.tex}
+    \section{2D Taylor-Green Vortex}\label{sec:pinn-2d-tgv}
 
-        \subsection{Problem description}
+        \subsection{Problem description and PINN Configurations}
+        \label{sec:pinn-2d-tgv-intro}
         \input{chapter.4/section.4.1.1.tex}
 
-        \subsection{Network and solver configurations}
+        \subsection{Result Visualizations}
+        \label{sec:pinn-2d-tgv-vis}
         \input{chapter.4/section.4.1.2.tex}
 
-        \subsection{Result Visualizations}
+        \subsection{Scalability}
+        \label{sec:pinn-2d-tgv-scaling}
         \input{chapter.4/section.4.1.3.tex}
 
-        \subsection{Scalability}
+        \subsection{Aggregate Loss and Prediction Accuracy}
+        \label{sec:pinn-2d-tgv-loss-vs-accuracy}
         \input{chapter.4/section.4.1.4.tex}
 
-        \subsection{Training Strategy Investigation}
+        \subsection{Model Complexity, Batch sizes, and Time Costs}
+        \label{sec:pinn-2d-tgv-model-complexity}
         \input{chapter.4/section.4.1.5.tex}
 
-        \subsection{Model Complexity and time cost}
+        \subsection{Training Strategy Investigation}
+        \label{sec:pinn-2d-tgv-training-strategy}
         \input{chapter.4/section.4.1.6.tex}
 
     \section{Steady 2D Cylinder Flow: $Re=40$}
-        \subsection{Problem description and case configurations}
-        \subsection{Results}
-        \input{chapter.4/section.4.2.2.tex}
-    \section{Unsteady 2D Cylinder Flow: Vortex Shedding at $Re=200$}
-        \subsection{Problem description and case configurations}
-        \subsection{Results}
+    \label{sec:pinn-2d-cylinder-re40}
 
-\chapter{Discussion and Future Works}\label{chap:discussion}
+        \subsection{Problem Description and Configurations}
+        \label{sec:pinn-2d-cylinder-re40-conf}
+        \input{chapter.4/section.4.2.1.tex}
+
+        \subsection{Results}
+        \label{sec:pinn-2d-cylinder-re40-results}
+        \input{chapter.4/section.4.2.2.tex}
+
+    \section{Unsteady 2D Cylinder Flow: Vortex Shedding at $Re=200$}
+    \label{sec:pinn-2d-cylinder-re200}
+
+        \subsection{Problem Description and Configurations}
+        \label{sec:pinn-2d-cylinder-re200-conf}
+        \input{chapter.4/section.4.3.1.tex}
+
+        \subsection{Results}
+        \label{sec:pinn-2d-cylinder-re200-results}
+        \input{chapter.4/section.4.3.2.tex}
+
+\chapter{Discussion and Conclusion}\label{chap:discussion}
 \input{chapter.5.tex}
 
 \sloppy
 \printbibliography[heading=bibintoc, title=References]
 \fussy
-
-\appendix
-\chapter{Extra Data and Visualizations for 2D Taylor-Green Vortex Benchmarks}\label{sec:extra-data}
-% \input{appendices/appendix_a.tex}
 
 \end{document}
 % vim:ft=tex
