--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -24,8 +24,8 @@
 
 % committee members (start from index 1 and continue the list)
 \committee{Lorena A. Barba, Professor of Mechanical and Aerospace Engineering, Dissertation Director}
-\committee{Michael W. Plesniak, Chair of the Department of Mechanical and Aerospace Engineering, Committee Member}
 \committee{Elias Balaras, Professor of Mechanical and Aerospace Engineering, Committee Member}
+\committee{Petros Koumoutsakos, Herbert S. Winokur, Jr. Professor of Engineering and Applied Sciences, Harvard University, Committee Member}
+\committee{Kyle Niemeyer, Associate Professor of Mechanical Engineering, Oregon State University, Committee Member}
 \committee{Peng Wei, Assistant Professor of Mechanical and Aerospace Engineering, Committee Member}
-\committee{Kyle Niemeyer, Associate Professor of Mechanical Engineering, Committee Member}
 % vim:ft=tex
