--- a/tikzit.sty
+++ b/tikzit.sty
@@ -1,7 +1,4 @@
-\usepackage{tikz}
-\usetikzlibrary{backgrounds}
-\usetikzlibrary{arrows}
-\usetikzlibrary{shapes,shapes.geometric,shapes.misc}
+\input{tikzit.tikzdefs}
 
 % this style is applied by default to any tikzpicture included via \tikzfig
 \tikzstyle{tikzfig}=[baseline=-0.25em,scale=0.5]
