--- a/chapter.5.tex
+++ b/chapter.5.tex
@@ -4,7 +4,7 @@
 
 In this section, we would like to discuss on the items we listed in section \ref{sec:aims}.
 
-\subsection*{Cost-performance ratios}
+\subsection*{Cost-Performance Ratios}
 
 From the benchmarks in chapter \ref{chap:pinn-cases}, our first impression is the time cost or time-to-solution of PINNs.
 Even for simple cases like the Taylor-Green vortex, the run times of PINN cases are in hours, while those of PetIBM cases (figure \ref{fig:petibm-tgv-spatial-temporal-error}) are in seconds.
@@ -31,7 +31,7 @@ Furthermore, increasing the number of hidden layers may be a better option becau
 However, lacking a metric to measure model complexity, we failed to study how model complexity influences errors quantitatively.
 It also harms engineering practice. 
 First, we cannot estimate the required model complexity during the planning phase of a project.
-Second, missing a quantitative convergence relationship also complicates the V\&V of PINN-based simulation software
+Second, missing a quantitative convergence relationship also complicates the V\&V of PINN-based simulation software.
 Grid convergence tests are a standard tool to verify the code implementation of a numerical scheme.
 Without known convergence properties, only solution verification is available (aside from low-level unit tests).
 However, comparing the simulation results to the known solutions is not an efficient verification method for PINNs.
@@ -51,19 +51,13 @@ In addition, we carried out experiments on the latest GPU with a massive memory.
 We presume that when using older GPUs with limited memory, a complicated neural network and its associated automatic differentiation may take a large portion of the memory, leaving insufficient space to host even the minimal required number of training points.
 In such a case, the good weak scaling may be valuable.
 
-In terms of strong scaling, our benchmarks show an unsatisfying speedups and efficiency.
-We acknowledge our strong-scaling experiments may not be objective enough as the actual total work loading was not evenly distributed to each GPU.
-If the work loading can be naively decoupled into a network's contribution and training points' contribution, our strong scaling experiments only distributed the contribution from the training points, while the network's contribution was duplicated to each GPU.
-However, at this point, we are not aware a fair way to test PINNs' strong scaling.
-We consider this as a limitation in our work.
-
 In terms of strong scaling, our benchmarks show unsatisfying speedups and efficiency.
 We acknowledge that our strong-scaling experiments may not be objective enough as the total work loading was not evenly distributed to each GPU.
-If the work loading can be naively decoupled into a network's contribution and training points' contribution, our strong scaling experiments only distributed the contribution from the training points, and the network's contribution was duplicated to each GPU.
+If the work loading can be naively decoupled into a network's contribution and training points' contribution, our strong-scaling experiments only distributed the contribution from the training points, and the network's contribution was duplicated to each GPU.
 However, at this point, we are not aware of a fair way to test PINNs' strong scaling.
 We consider this a limitation in our work.
 
-\subsection*{Training strategies}
+\subsection*{Training Strategies}
 
 We have tested annealing loss aggregation, cyclical learning rate, stochastic weight averaging (SWA), and nonlinear conjugate-gradient (CG) optimizer.
 Unfortunately, we consider that none of these attempts show a significant effect.
