--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,3 +1,42 @@
 %! TEX root = ../main.tex
-\abstract{}
+\abstract{
+Solving the Navier-Stokes with deep learning has been a popular research topic since the term {\it physics-informed neural networks} (PINNs) was coined by Raissi et al. in 2017.
+A search on Google Scholar using "physics-informed neural networks" as the keyword revealed a rapid growth from 60 results in 2017 to 3,340 results in 2021.
+Such a blooming in PINNs raised our interest in how ready PINNs are for computational fluid dynamics applications in practical engineering.
+
+This work aims to understand PINNs' capability to solve CFD problems from the perspectives of predictability and controllability.
+Predictability helps engineering practitioners estimate the cost for the desired accuracy level, and controllability means whether practitioners can control the cost and accuracy.
+We investigated convergence behaviors, scalability, cost-performance ratios, and the cost of non-computing tasks.
+We also investigated several training strategies and PINNs' capability to solve flow problems with instability.
+
+The results show that PINNs exhibit a qualitatively converging behavior with respect to model complexity.
+And increasing the number of hidden layers is a better option to increase the model complexity.
+However, a proper quantitative metric for evaluating model complexity is necessary for further analyses and cost-performance estimation in engineering practice.
+We also found that the accuracy-loss relationship becomes more nondeterministic when the model complexity increases, which may hurt its engineering use.
+
+On the other hand, our results show that PINNs have good weak scaling, which helps scale per-batch training points when using lower-end GPUs.
+However, our benchmarks also indicate that PINNs are generally insensitive to the number of per-batch training points for unknown reasons.
+Increasing per-batch training points hurts the time-to-solution for no apparent benefit---and we found PINNs' time-to-solutions were already several orders slower than conventional CFD code.
+
+Our PINN implementation could not predict vortex shedding in a 2D cylinder flow at $Re=200$.
+The unsteady PINN solver converged to a steady-state solution.
+Another data-driven benchmark also converged to a steady-state solution when the predicted data were outside the time range of provided observed data.
+These results cast doubt on both data-driven and data-free PINNs' capability to solve flow with instability.
+Nevertheless, the PINN solver's drag coefficient predictions agreed with steady-state simulations' results.
+And we additionally validated the predictions for a cylinder flow at $Re=40$.
+
+Besides the benchmarks in PINNs, this work briefly introduces PINNs.
+Starting from the difference between data-driven and data-free PINNs, we continued by introducing the history and the development of solving partial differential equations (PDEs) with data-free PINNs since 1994.
+We discussed the open questions and known issues of data-free PINNs, which further motivated the present work.
+In a later chapter, we detailed the mathematical expressions related to PINNs.
+Moreover, we compared PINNs to conventional numerical methods and showed that PINNs is a special case of the least-square finite element methods.
+
+We described our in-house high-performance CFD code and associated verification and validation (V\&V) to fairly compare conventional CFD methods and data-free PINNs.
+The V\&V confirmed the correctness of our CFD code, and the subsequent performance benchmarks demonstrated its computational performance.
+The in-house CFD code served as a baseline for PINNs' benchmarks.
+
+In a nutshell, our results show that PINNs is a relatively new research area.
+As we investigated the feasibility of PINNs, we found more open questions and challenges for PINNs to become a daily engineering tool.
+While most studies in the literature focused on the theoretical capability of PINNs and toy PDEs, we hope our work can arouse others' interest in solving those challenges.
+}
 % vim:ft=tex
