--- a/frontmatter/acknowledgment.tex
+++ b/frontmatter/acknowledgment.tex
@@ -1,6 +1,20 @@
 %! TEX root = ../main.tex
 \acknowledgments{
-    Without so many people's helps, supports, and advises, it is not possible for me to finish my long journey in PhD study.
-    Gil, Olivier, Naty, Tingyu, Anastasiia, and Paulina, and many other friends at GW.
+I sincerely appreciate my wife, Chao-Yi.
+My Ph.D. study is a long journey.
+She has always been supportive and has never been impatient with my slow progress on this journey.
+It is her who always told me to pursue what I like to do.
+
+I have been appreciative of my advisor, Professor Lorena Barba.
+She allowed me to explore any interests without worrying about anything.
+She was always there to protect students no matter what troubles we encountered.
+
+I am also grateful to all I have met at GW: Olivier, Tingyu, Naty, Gil, Anastasia, Paulina, Aditya, Akash, and so many other friends at GW.
+We survived Covid-19 together, and we survived this long journey at GW together.
+
+Finally, thanks to those reading this dissertation.
+Thanks to everyone and everything in my life.
+The current life is a result of all the events that happened in the past.
+These events and all the people I met made me who I am right now.
 }
 % vim:ft=tex
