--- a/main.tex
+++ b/main.tex
@@ -53,16 +53,16 @@
     \section{Overview}\label{sec:overview}
     \input{chapter.1/section.1.1.tex}
 
-    \section{Physics-informed neural networks (PINNs)}\label{sec:pinn-review}
+    \section{Physics-Informed Neural Networks (PINNs)}\label{sec:pinn-review}
     \input{chapter.1/section.1.2.tex}
 
-    \section{Issues and Open-questions in PINNs}\label{sec:pinn-issues}
+    \section{Issues and Open-Questions in PINNs}\label{sec:pinn-issues}
     \input{chapter.1/section.1.3.tex}
 
     \section{Motivation and Research Aims}\label{sec:aims}
     \input{chapter.1/section.1.4.tex}
 
-\chapter{PetIBM: a distributed-GPU incompressible Navier-Stokes solver}\label{chap:petibm}
+\chapter{PetIBM: a Distributed-GPU Incompressible Navier-Stokes Solver}\label{chap:petibm}
 \input{chapter.2/summary.tex}
 
     \section{Decoupled Immersed-Boundary Projection Method}\label{sec:petibm-math}
@@ -110,14 +110,14 @@
         \subsection{Nonlinear Conjugate-Gradient Optimizer and Line Search}\label{sec:ncg}
         \input{chapter.3/section.3.3.2.tex}
 
-    \section{Remark on difference and similarities with conventional numerical methods}\label{sec:pinn-diff}
+    \section{Remarks on Differences and Similarities with Conventional Numerical Methods}\label{sec:pinn-diff}
     \input{chapter.3/section.3.4.tex}
 
 \chapter{Computational Experiments and Benchmarks}\label{chap:pinn-cases}
 
     \section{2D Taylor-Green Vortex}\label{sec:pinn-2d-tgv}
 
-        \subsection{Problem description and PINN Configurations}
+        \subsection{Problem Description and PINN Configurations}
         \label{sec:pinn-2d-tgv-intro}
         \input{chapter.4/section.4.1.1.tex}
 
@@ -133,7 +133,7 @@
         \label{sec:pinn-2d-tgv-loss-vs-accuracy}
         \input{chapter.4/section.4.1.4.tex}
 
-        \subsection{Model Complexity, Batch sizes, and Time Costs}
+        \subsection{Model Complexity, Batch Sizes, and Time Costs}
         \label{sec:pinn-2d-tgv-model-complexity}
         \input{chapter.4/section.4.1.5.tex}
 
