add github link of the repro pack

--- a/references.bib
+++ b/references.bib
@@ -1472,3 +1472,9 @@
 	langid = {english},
 	doi = {10.1007/978-0-387-40065-5},
 }
+
+@software{chuang_dissertation_nodate,
+	title = {Dissertation Reporducibility Pack, https://github.com/piyueh/dissertation-repro-pack},
+	url = {https://github.com/piyueh/dissertation-repro-pack},
+	author = {Chuang, Pi-Yueh}
+}
