--- a/main.tex
+++ b/main.tex
@@ -79,7 +79,7 @@
 
 \chapter{Physics-Informed Neural Networks}\label{chap:pinn}
 
-    \section{Solving Workflow Overview}\label{sec:pinn-workflow-overview}
+    \section{Solution Workflow}\label{sec:pinn-workflow-overview}
 
         \subsection{Overview}\label{sec:pinn-overview}
         \input{chapter.3/section.3.1.1.tex}
