--- a/main.tex
+++ b/main.tex
@@ -113,6 +113,9 @@
     \section{Remarks on Differences and Similarities with Conventional Numerical Methods}\label{sec:pinn-diff}
     \input{chapter.3/section.3.4.tex}
 
+    \section{Code Implementation}\label{sec:pinn-code-impl}
+    \input{chapter.3/section.3.5.tex}
+
 \chapter{Computational Experiments and Benchmarks}\label{chap:pinn-cases}
 
     \section{2D Taylor-Green Vortex}\label{sec:pinn-2d-tgv}
