--- a/references.bib
+++ b/references.bib
@@ -1478,3 +1478,21 @@
 	url = {https://github.com/piyueh/dissertation-repro-pack},
 	author = {Chuang, Pi-Yueh}
 }
+
+@article{meurer_sympy_2017,
+	title = {{SymPy}: symbolic computing in Python},
+	volume = {3},
+	issn = {2376-5992},
+	url = {https://doi.org/10.7717/peerj-cs.103},
+	doi = {10.7717/peerj-cs.103},
+	pages = {e103},
+	journaltitle = {{PeerJ} Computer Science},
+	author = {Meurer, Aaron and Smith, Christopher P. and Paprocki, Mateusz and Čertík, Ondřej and Kirpichev, Sergey B. and Rocklin, Matthew and Kumar, {AMiT} and Ivanov, Sergiu and Moore, Jason K. and Singh, Sartaj and Rathnayake, Thilina and Vig, Sean and Granger, Brian E. and Muller, Richard P. and Bonazzi, Francesco and Gupta, Harsh and Vats, Shivam and Johansson, Fredrik and Pedregosa, Fabian and Curry, Matthew J. and Terrel, Andy R. and Roučka, Štěpán and Saboo, Ashutosh and Fernando, Isuru and Kulal, Sumith and Cimrman, Robert and Scopatz, Anthony},
+	date = {2017-01},
+}
+
+@software{noauthor_modulus_nodate,
+	title = {Modulus, https://docs.nvidia.com/deeplearning/modulus/index.html},
+	url = {https://docs.nvidia.com/deeplearning/modulus/index.html},
+	publisher = {{NVIDIA}}
+}
