--- a/chapter.5.tex
+++ b/chapter.5.tex
@@ -117,6 +117,9 @@ From this viewpoint, PINNs may have advantages over traditional CFD solvers in t
 
 \section{Conclusion}
 
+The abstract of this dissertation summarizes the key findings of the present work.
+And all relevant code, scripts, container definition files can be found at \cite{chuang_dissertation_nodate}.
+
 Our benchmarks show that PINNs may still have a long way to go until being suitable for practical engineering problems.
 Our computational experiments also bring out more interesting and potential future research directions.
 They may not be a well-qualified tool for engineering practice, but it is a new area of research full of open questions and challenges waiting for people to tackle.
