revise chapters' and sections' names

--- a/main.tex
+++ b/main.tex
@@ -77,7 +77,7 @@
     \section{Performance Benchmarks}\label{sec:petibm-perf}
     \input{chapter.2/section.2.4.tex}
 
-\chapter{Physics-Informed Neural Networks}\label{chap:pinn}
+\chapter{PINNs and Details of the Methods Used in This Work}\label{chap:pinn}
 
     \section{Solution Workflow}\label{sec:pinn-workflow-overview}
 
@@ -95,7 +95,7 @@
         \subsection{Multilayer Perceptron Networks}\label{sec:mlp}
         \input{chapter.3/section.3.2.1.tex}
 
-        \subsection{Periodic Boundaries Handling}\label{sec:periodic-boundary}
+        \subsection{Handling of Periodic Boundaries}\label{sec:periodic-boundary}
         \input{chapter.3/section.3.2.2.tex}
 
         \subsection{Automatic Differentiation}\label{sec:ad}
@@ -128,7 +128,7 @@
         \label{sec:pinn-2d-tgv-vis}
         \input{chapter.4/section.4.1.2.tex}
 
-        \subsection{Scalability}
+        \subsection{Parallel Scalability}
         \label{sec:pinn-2d-tgv-scaling}
         \input{chapter.4/section.4.1.3.tex}
 
