--- a/main.tex
+++ b/main.tex
@@ -56,7 +56,7 @@
     \section{Physics-Informed Neural Networks (PINNs)}\label{sec:pinn-review}
     \input{chapter.1/section.1.2.tex}
 
-    \section{Issues and Open-Questions in PINNs}\label{sec:pinn-issues}
+    \section{Issues and Open Questions in PINNs}\label{sec:pinn-issues}
     \input{chapter.1/section.1.3.tex}
 
     \section{Motivation and Research Aims}\label{sec:aims}
