--- a/chapter.5.tex
+++ b/chapter.5.tex
@@ -8,7 +8,7 @@ In this section, we would like to discuss on the items we listed in section \ref
 
 From the benchmarks in chapter \ref{chap:pinn-cases}, our first impression is the time cost or time-to-solution of PINNs.
 Even for simple cases like the Taylor-Green vortex, the run times of PINN cases are in hours, while those of PetIBM cases (figure \ref{fig:petibm-tgv-spatial-temporal-error}) are in seconds.
-If we consider the time cost under the same solution error level, PetIBM only needs less than 20 seconds to achieve the same error level of the most accurate PINN case (at about $L_{2,sp-t}=8e-2$, according to figure \ref{fig:tgv2d-re100-err-vs-time}).
+If we consider the time cost under the same solution error level, PetIBM needs less than 20 seconds to achieve the same error level of the most accurate PINN case (at about $L_{2,sp-t}=8e-2$, according to figure \ref{fig:tgv2d-re100-err-vs-time}).
 If we only consider the time required to reach an acceptable converged solution, the gap in the time cost is still significant.
 For example, from figure \ref{fig:nl3-nn256-npts4096-loss-err-hist}, if the solution converged at the 200,000th iteration, the time-to-solution is still $1.5$ hours, which can not compete with PetIBM's $20$ seconds.
 
@@ -19,6 +19,7 @@ Moreover, PetIBM's accuracy is much higher than the unsteady PINN's because PetI
 At least for forward problems, qualitatively speaking, PINNs' cost-performance ratios are significantly inferior to PetIBM and most conventional numerical PDE schemes.
 
 We believe the high cost of PINNs comes from automatic differentiation.
+Profiling should be done to confirm our suspicion.
 As discussed at the end of section \ref{sec:pinn-diff}, when solving PDEs with PINNs, automatic differentiation is used to get higher-order derivatives, making the computational graph grow exponentially.
 Also, it means the computational cost and memory requirement may grow exponentially.
 
@@ -29,7 +30,7 @@ We found that increasing the number of hidden layers and doubling the number of 
 Furthermore, increasing the number of hidden layers may be a better option because it needs fewer new model parameters and hence less extra computational cost.
 
 However, lacking a metric to measure model complexity, we failed to study how model complexity influences errors quantitatively.
-It also harms engineering practice. 
+It also disadvantages engineering practice. 
 First, we cannot estimate the required model complexity during the planning phase of a project.
 Second, missing a quantitative convergence relationship also complicates the V\&V of PINN-based simulation software.
 Grid convergence tests are a standard tool to verify the code implementation of a numerical scheme.
@@ -60,7 +61,7 @@ We consider this a limitation in our work.
 \subsection*{Training Strategies}
 
 We have tested annealing loss aggregation, cyclical learning rate, stochastic weight averaging (SWA), and nonlinear conjugate-gradient (CG) optimizer.
-Unfortunately, we consider that none of these attempts show a significant effect.
+Unfortunately, we conclude that none of these attempts show a significant effect.
 
 However, we used the cyclical learning rate in later benchmarks of cylinder flows because of its theoretical capability to escape saddle points and local minimums.
 Based on our previous experiments, the cyclical learning rate behaves like the exponential learning rate without much performance penalty in the worst scenario.
@@ -77,7 +78,7 @@ Even if we train a PINN model in a data-driven fashion by feeding data from PetI
 Beyond this time range, the data-driven PINN quickly returns to flow without shedding.
 
 The predicted drag and lift coefficients support that the unsteady PINN converges to a steady state solution.
-As non-shedding flow might still be possible in a perfect world without any perturbation, we refrain from calling the result unphysical.
+Since non-shedding flow might still be possible in a perfect world without any perturbation, we refrain from calling the result unphysical.
 However, we believe it is not the missing perturbation that makes the flow steady; otherwise, the data-driven case should have shown continuous vortex shedding even after the time when no PetIBM data is available.
 The actual reason for the absence of the vortex shedding is still unknown to us.
 Due to the limited resources, we could not test with more flow problems with instability.
@@ -98,14 +99,14 @@ For in-house solvers, it may also include the time required for code development
 For forward problems, the PINN method is slower than traditional CFD methods based on our experience.
 However, when considering pre-/post-processing, the overall time cost may be different.
 People tend to ignore the pre-/post-processing's time cost.
-Labors and computational times required for pre-/post-processing highly depend on the solvers.
+Labor and computational times required for pre-/post-processing highly depend on the solvers.
 For example, unstructured-grid CFD solvers require much more labor and computational time during pre-processing.
-These invisible time costs of numerical solvers accumulate and become significant to applications requiring parameter sweeps.
+These often-ignored time costs of numerical solvers accumulate and become significant to applications requiring parameter sweeps.
 So when it comes to applications like the geometry design of a fluid flow-related product, the PINN method may not necessarily be slower than traditional CFD solvers.
 
 Another view of this topic is the time cost of developing a new solver. 
-Because of the popularity of deep learning, programming tools for deep learning received much attention and got improvement frequently.
-For example, with Modulus' help, we were able to develop a PINN solver in hundreds of lines of Python code.
+Because of the popularity of deep learning, programming tools for deep learning received much attention and get improvement frequently.
+For example, with Modulus' help, we were able to develop a PINN solver in just hundreds of lines of Python code.
 As most of the components in a PINN solver are from well-developed third-party libraries and have a wide range of users, their quality and performance are guaranteed to some degree.
 Moreover, as providers keep developing new computing hardware for deep learning applications, these third-party libraries often adopt and are tuned for new hardware quickly.
 As the interface remains the same, users do not have to rewrite their code but can still enjoy the high performance of the new hardware.
@@ -122,6 +123,6 @@ And all relevant code, scripts, container definition files can be found at \cite
 
 Our benchmarks show that PINNs may still have a long way to go until being suitable for practical engineering problems.
 Our computational experiments also bring out more interesting and potential future research directions.
-They may not be a well-qualified tool for engineering practice, but it is a new area of research full of open questions and challenges waiting for people to tackle.
+PINNs may not be a well-qualified tool for engineering practice, but it is a new area of research full of open questions and challenges waiting for people to tackle.
 
 % vim:ft=tex
