--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,7 @@
 \usepackage[protrusion=true, final]{microtype}
 \usepackage{xurl}  % break long URLs in References
 \usepackage{silence}  % hide some known warning
+\usepackage[group-separator={,}]{siunitx}
 \input{tikzit.tikzstyles}
 
 % hide some known warnings
