use siunitx for integers

--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,7 +1,7 @@
 %! TEX root = ../main.tex
 \abstract{
 Solving the Navier-Stokes equations with deep learning has been a popular research topic since the term {\it physics-informed neural networks} (PINNs) was coined by Raissi et al. in 2017.
-A search on Google Scholar using "physics-informed neural networks" as the keyword revealed a rapid growth from 60 results in 2017 to 3,340 results in 2021.
+A search on Google Scholar using "physics-informed neural networks" as the keyword revealed a rapid growth from 60 results in 2017 to \num{3340} results in 2021.
 Such a blooming in PINNs raised our interest in how ready PINNs are for computational fluid dynamics (CFD) applications in practical engineering.
 
 This work aims to understand data-free PINNs' capability to solve CFD problems from the perspectives of predictability and controllability.
