split inline math sequences and tuples

--- a/tables/tgv-2d-re100/scaling-tests/strong-scaling.tex
+++ b/tables/tgv-2d-re100/scaling-tests/strong-scaling.tex
@@ -2,9 +2,9 @@
 \centering
 \singlespacing
 \caption[
-    PINNs, 2D TGV, $Re=100$: strong scaling performance for $(N_l, N_n, N_{bs})=(2, 32, 65536)$ and $(3, 128, 65536)$
+    PINNs, 2D TGV, $Re=100$: strong scaling performance for $(N_l$, $N_n$, $N_{bs})$ $=$ $(2$, $32$, $65536)$ and $(3$, $128$, $65536)$
 ]{
-    Strong scaling performance for $(N_l, N_n, N_{bs})$ $=$ $(2, 32, 65536)$ and $(3, 128, 65536)$.%
+    Strong scaling performance for $(N_l$, $N_n$, $N_{bs})$ $=$ $(2$, $32$, $65536)$ and $(3$, $128$, $65536)$.%
     Time costs denote the wall time required to finish 400k training iterations in hours.%
     Efficiency here stands for strong scaling efficiency in $\%$.%
     The aggregated losses were those at the last iteration.%
