--- a/tables/tgv-2d-re100/scaling-tests/weak-scaling.tex
+++ b/tables/tgv-2d-re100/scaling-tests/weak-scaling.tex
@@ -2,9 +2,9 @@
 \centering
 \singlespacing
 \caption[
-    PINNs, 2D TGV, $Re=100$: weak scaling performance for $(N_l, N_n, N_{bs})=(2, 32, 8192)$ and $(3, 128, 8192)$
+    PINNs, 2D TGV, $Re=100$: weak scaling performance for $(N_l$, $N_n$, $N_{bs})$ $=$ $(2$, $32$, $8192)$ and $(3$, $128$, $8192)$
 ]{
-    Weak scaling performance for $(N_l, N_n, N_{bs})$ $=$ $(2, 32, 8192)$ and $(3, 128, 8192)$.%
+    Weak scaling performance for $(N_l$, $N_n$, $N_{bs})$ $=$ $(2$, $32$, $8192)$ and $(3$, $128$, $8192)$.%
     Time costs denote the wall time required to finish 400k training iterations in hours.%
     Efficiency here stands for weak scaling efficiency in $\%$.%
     The aggregated losses are those at the last iteration.%
