--- a/references.bib
+++ b/references.bib
@@ -1496,3 +1496,60 @@
 	url = {https://docs.nvidia.com/deeplearning/modulus/index.html},
 	publisher = {{NVIDIA}}
 }
+
+@article{jeong_identification_1995,
+	title = {On the identification of a vortex},
+	volume = {285},
+	issn = {0022-1120, 1469-7645},
+	doi = {10.1017/S0022112095000462},
+	pages = {69--94},
+	journaltitle = {Journal of Fluid Mechanics},
+	shortjournal = {J. Fluid. Mech.},
+	author = {Jeong, Jinhee and Hussain, Fazle},
+	urldate = {2022-11-29},
+	date = {1995-02-25},
+	langid = {english},
+}
+
+@article{chen_variants_2012,
+	title = {Variants of Dynamic Mode Decomposition: Boundary Condition, Koopman, and Fourier Analyses},
+	volume = {22},
+	issn = {0938-8974, 1432-1467},
+	doi = {10.1007/s00332-012-9130-9},
+	shorttitle = {Variants of Dynamic Mode Decomposition},
+	pages = {887--915},
+	number = {6},
+	journaltitle = {Journal of Nonlinear Science},
+	shortjournal = {J Nonlinear Sci},
+	author = {Chen, Kevin K. and Tu, Jonathan H. and Rowley, Clarence W.},
+	urldate = {2022-11-29},
+	date = {2012-12},
+	langid = {english},
+}
+
+@article{rowley_spectral_2009,
+	title = {Spectral analysis of nonlinear flows},
+	volume = {641},
+	issn = {0022-1120, 1469-7645},
+	doi = {10.1017/S0022112009992059},
+	pages = {115--127},
+	journaltitle = {Journal of Fluid Mechanics},
+	shortjournal = {J. Fluid Mech.},
+	author = {Rowley, Clarence W. and Mezić, Igor and Bagheri, Shervin and Schlatter, Philipp and Henningson, Dan S.},
+	urldate = {2022-11-10},
+	date = {2009-12-25},
+	langid = {english},
+}
+
+@inproceedings{rahaman_spectral_2019,
+	title = {On the Spectral Bias of Neural Networks},
+	volume = {97},
+	url = {https://proceedings.mlr.press/v97/rahaman19a.html},
+	series = {Proceedings of Machine Learning Research},
+	pages = {5301--5310},
+	booktitle = {Proceedings of the 36th International Conference on Machine Learning},
+	publisher = {{PMLR}},
+	author = {Rahaman, Nasim and Baratin, Aristide and Arpit, Devansh and Draxler, Felix and Lin, Min and Hamprecht, Fred and Bengio, Yoshua and Courville, Aaron},
+	editor = {Chaudhuri, Kamalika and Salakhutdinov, Ruslan},
+	date = {2019-06-09},
+}
